fix: corregir rutas para GitHub Pages subdirectory
- Cambiar start_url a ruta relativa ./index.html
- Agregar scope: ./ en manifest.json
- Actualizar urlsToCache con rutas relativas (./)
- Incrementar cache version a v3 para forzar actualización

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Huecos & Tareas",
   "short_name": "Huecos",
   "description": "Mini planificador diario por capacidad - Gestiona tus huecos de tiempo y tareas",
-  "start_url": "/index.html",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#f8f9fa",
   "theme_color": "#4a90d9",
